package com.shengsiyuan.dp.builder.v1;

public class Client {

    public static void main(String[] args) {

        CommonHouse commonHouse = new CommonHouse();
        commonHouse.build();
    }
}
